--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "description": "gond.tools homepage based on Svelte and Tailwind",
     "version": "1.0.0",
     "license": "GPL-3.0-or-later",
+    "type": "module",
     "authors": [
         {
             "name": "j0Shi82",
@@ -9,95 +10,71 @@
         }
     ],
     "devDependencies": {
-        "@babel/core": "^7.21.4",
-        "@babel/eslint-parser": "^7.21.3",
-        "@babel/plugin-transform-runtime": "^7.21.4",
-        "@babel/preset-env": "^7.21.4",
-        "@tailwindcss/forms": "^0.5.3",
-        "babel-jest": "^29.5.0",
-        "babel-loader": "^9.1.2",
-        "browserslist-useragent-regexp": "^4.0.0",
-        "copy-webpack-plugin": "^11.0.0",
+        "@sveltejs/vite-plugin-svelte": "^3.1.1",
+        "@tailwindcss/forms": "^0.5.7",
+        "browserslist-useragent-regexp": "^4.1.3",
+        "copy-webpack-plugin": "^12.0.2",
         "cross-env": "^7.0.3",
-        "css-loader": "^6.7.3",
-        "dotenv-webpack": "^8.0.1",
+        "css-loader": "^7.1.2",
+        "dotenv-webpack": "^8.1.0",
         "env-cmd": "^10.1.0",
-        "eslint": "^8.37.0",
+        "eslint": "^9.4.0",
         "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-import": "^2.27.5",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-svelte3": "^4.0.0",
-        "html-webpack-plugin": "^5.5.0",
-        "husky": "^8.0.3",
-        "jest": "^29.5.0",
+        "html-webpack-plugin": "^5.6.0",
+        "husky": "^9.0.11",
         "jest-transform-svelte": "^2.1.1",
-        "lint-staged": "^13.2.0",
-        "mini-css-extract-plugin": "^2.7.5",
-        "node-gyp": "^9.3.1",
-        "node-sass": "^8.0.0",
-        "npm-check-updates": "^16.9.0",
-        "postcss": "^8.4.21",
-        "postcss-custom-properties": "^13.1.4",
-        "postcss-import": "^15.1.0",
-        "postcss-load-config": "^4.0.1",
-        "postcss-loader": "^7.1.0",
+        "lint-staged": "^15.2.5",
+        "mini-css-extract-plugin": "^2.9.0",
+        "npm-check-updates": "^16.14.20",
+        "postcss": "^8.4.38",
+        "postcss-custom-properties": "^13.3.10",
+        "postcss-import": "^16.1.0",
+        "postcss-load-config": "^6.0.1",
+        "postcss-loader": "^8.1.1",
         "postcss-nested": "^6.0.1",
-        "prettier": "^2.8.7",
-        "prettier-plugin-svelte": "^2.10.0",
-        "sass": "^1.60.0",
-        "sass-loader": "^13.2.2",
-        "style-loader": "^3.3.2",
-        "stylelint": "^15.4.0",
+        "prettier": "^3.3.1",
+        "prettier-plugin-svelte": "^3.2.4",
+        "sass": "^1.77.4",
+        "sass-loader": "^14.2.1",
+        "style-loader": "^4.0.0",
+        "stylelint": "^16.6.1",
         "stylelint-config-prettier": "^9.0.5",
-        "stylelint-config-recommended-scss": "^9.0.1",
-        "stylelint-config-standard-scss": "^7.0.1",
-        "svelte-loader": "^3.1.7",
+        "stylelint-config-recommended-scss": "^14.0.0",
+        "stylelint-config-standard-scss": "^13.1.0",
+        "svelte-loader": "^3.2.3",
         "tailwind-color-alpha": "^1.0.4",
-        "webpack": "^5.77.0",
-        "webpack-cli": "^5.0.1",
-        "webpack-dev-server": "^4.13.2"
+        "vite": "^5.2.13"
     },
     "scripts": {
-        "build": "env-cmd cross-env NODE_ENV=production webpack",
-        "build:vercel": "cross-env NODE_ENV=production webpack",
-        "dev": "env-cmd webpack serve --port 8087",
-        "test": "jest --coverage --runInBand",
-        "lint": "eslint -c .eslintrc.js --ext .svelte,.js src"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
     },
     "dependencies": {
-        "@babel/runtime-corejs3": "^7.21.0",
         "@easepick/core": "^1.2.1",
         "@easepick/range-plugin": "^1.2.1",
-        "@fortawesome/free-brands-svg-icons": "^6.4.0",
-        "@fortawesome/free-solid-svg-icons": "^6.4.0",
-        "@yaireo/tagify": "^4.17.7",
-        "autoprefixer": "^10.4.14",
-        "axios": "^1.3.4",
-        "chart.js": "^4.2.1",
+        "@fortawesome/free-brands-svg-icons": "^6.5.2",
+        "@fortawesome/free-solid-svg-icons": "^6.5.2",
+        "autoprefixer": "^10.4.19",
+        "axios": "^1.7.2",
+        "chart.js": "^4.4.3",
         "chartjs-adapter-date-fns": "^3.0.0",
-        "chartjs-plugin-trendline": "^2.0.1",
+        "chartjs-plugin-trendline": "^2.1.0",
         "color": "^4.2.3",
-        "core-js": "^3.29.1",
-        "date-fns": "^2.29.3",
-        "express": "^4.18.2",
-        "postcss-discard-duplicates": "^6.0.0",
-        "regexparam": "^2.0.1",
-        "svelte": "^3.58.0",
-        "svelte-awesome": "^3.2.0",
-        "svelte-fa": "^3.0.3",
-        "svelte-i18n": "^3.6.0",
+        "date-fns": "^3.6.0",
+        "express": "^4.19.2",
+        "postcss-discard-duplicates": "^7.0.0",
+        "regexparam": "^3.0.0",
+        "svelte": "^4.2.18",
+        "svelte-awesome": "^3.3.1",
+        "svelte-fa": "^4.0.2",
+        "svelte-i18n": "^4.0.0",
         "svelte-loadable": "^2.0.1",
-        "svelte-preprocess": "^5.0.3",
         "svelte-spa-chunk": "^2.0.0",
-        "svelte-spa-router": "^3.3.0",
-        "tailwindcss": "^3.3.1"
-    },
-    "browserslist": [
-        "defaults and supports css-grid and supports flexbox and supports css-sticky and supports es6-module and supports es6-module-dynamic-import, not opera > 0, not samsung > 0, not and_qq > 0"
-    ],
-    "lint-staged": {
-        "*.{js,svelte}": [
-            "yarn lint"
-        ]
+        "svelte-spa-router": "^4.0.1",
+        "tailwindcss": "^3.4.4"
     }
 }
